--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
     <title>SAP Customer Identity Web SDK Demo</title>
     <meta name="viewport" content="width=device-width">
     <SCRIPT type="text/javascript" lang="javascript" src="https://cdns.gigya.com/js/gigya.js?apikey=4_Xr0VMWstvpoQDNDKCBxIQQ"></SCRIPT>
-    
-    <a href="#" 
-    onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});"
-    id="sub_link">   Subscribe Here!</a>
-
-    <SCRIPT type="text/javascript" lang="javascript">
-        var onGigyaServiceReady = function () {
-        }
-     </SCRIPT>
-   </head>
+    </head>
   <body>
+    <a href="#" 
+    onclick="gigya.accounts.showScreenSet({screenSet:'Default-LiteRegistration'});">Subscribe Here!</a>
   </body>
 </html>
