--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>SAP Customer Identity Web SDK Demo</title>
     <meta name="viewport" content="width=device-width">
-    <SCRIPT type="text/javascript" lang="javascript" src="https://cdns.gigya.com/js/gigya.js?apikey=4_Xr0VMWstvpoQDNDKCBxIQQ"></SCRIPT>
+    <SCRIPT type="text/javascript" lang="javascript" src="https://cdn.gigya.com/js/gigya.js?apikey=4_Xr0VMWstvpoQDNDKCBxIQQ"></SCRIPT>
     </head>
   <body>
     <a href="#" 
